cmake_minimum_required(VERSION 3.5)

project("Range-based" VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(MY_INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/include)

find_package(Qt6 REQUIRED Core)

add_subdirectory(src)


install(TARGETS untitled1
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
